# efference

./: .env  .gitignore  NOTES.md  README.md  USER_MANUAL.md  docker-compose.yml
.github/workflows/: control-plane-ci.yml  deploy-control-plane.yml  model-images-ci.yml  publish-sdk.yml  release.yml
efference/: README.md
efference/linux/: CMakeLists.txt  README.md  build.sh
efference/linux/include/ef/: Device.hpp  Enums.hpp  Parameters.hpp  device.hpp
efference/linux/src/: device.cpp  json.hpp  proto.hpp  usb_transport.cpp  usb_transport.hpp
efference/linux/tools/: ef_config.cpp  ef_info.cpp  ef_stream.cpp  ef_view.cpp
efference/models/: identity.py
examples/wired/example 1 - serial number/c/: main.c
examples/wired/example 1 - serial number/cpp/: main.cpp
examples/wired/example 1 - serial number/python/: main.py
examples/wired/example 2 - health check/python/: main.py
examples/wired/example 3 - data stream/python/: main.py
services/control_plane/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  requirements.txt
services/control_plane/app/: __init__.py  admin.py  config.py  constants.py  db.py  main.py  models.py  security.py
services/control_plane/app/db/: __init__.py  base.py  models.py
services/control_plane/app/routers/: __init__.py  health.py  images.py  streaming.py  videos.py
services/control_plane/app/routers/admin/: __init__.py  api_keys.py  auth.py  credits.py  customers.py
services/control_plane/app/services/: __init__.py  api.py  deps.py  security.py
services/model_server/: .dockerignore  Dockerfile  entrypoint.sh  requirements.txt
services/model_server/app/: __init__.py  main.py
services/model_server/app/adapters/: __init__.py  base.py  registry.py  rgbd_adapter.py
tutorials/tutorial 1 - serial number/c/: main.c
tutorials/tutorial 1 - serial number/python/: main.py
